Refactor: dto 분리 및 빌더패턴 적용
dto에 요소가 많고 가독성을 위해 빌더패턴 적용